@@ -6,7 +6,7 @@ compiler that provide the 2017 C++ standard functionalities (like fileSystem hea
 
 The Breakout4 project has four dependencies:
 - The SimpleDirectMediaLayer v2.x library (also called 'SDL2')
-- The WxWidgets framework
+- The WxWidgets framework (optional)
 - The CMake build tool.
 - The WarrenGamesCustomLibs, that you can download on my repository (infos on how to use them are indicated
 	in the 'compileSourcesHowTo.txt' of theses libraries). You will have to set in the main CMakeLists.txt of
@@ -21,9 +21,9 @@ and executable has a 'CMakeLists.txt' file (you can check in those file some det
  the CMake script language). Finally there is a main 'CMakeLists.txt' file to link all the sub projects between them.
 
 Implemented executables purposes:
-'game' : the Breakout4 game (a breakout clone).
-'wxLevelEditor' : a level editor for the game.
-'wxSavesEditor' : a game saves editor.
+'breakout4_game' : the Breakout4 game (a breakout clone).
+'breakout4_levelEditor' : a level editor for the game.
+'breakout4_savesEditor' : a game saves editor.
 
 How to download the dependencies (if you don't have repositories to get them directly, for example):
 The SDL2 can be downloaded from this web site: 'https://www.libsdl.org'
