@@ -1,3 +1,9 @@
+2024-09-27 : - Bug fix: the first level of the shop campaign was not the good one.
+	-The interface is more user friendly, with some more wallpapers instead of black screens.
+
+2024-09-04 : - A bug in the 'boxEvents.h' and 'boxEvents.cpp' has been fixed (the size of alpha characters was set with "'z' - 'a'" 
+	which sets the size to 25 whereas the good value must be 26 ).
+
 2024-08-30 : The main CMakeLists.txt file has been modified. There was a bug with the executables names 'breakout4_game', 
 	'breakout4_levelEditor' and breakout4_savesEditor' which led to an error when invoking cmake.
 
